Releasing ios-documents

--- a/Sources/DocumentsCore/Modules/DocumentsStack/DocumentsStackViewController.storyboard
+++ b/Sources/DocumentsCore/Modules/DocumentsStack/DocumentsStackViewController.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,11 +26,11 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nRi-ME-JW7">
-                                <rect key="frame" x="0.0" y="102" width="414" height="688"/>
+                                <rect key="frame" x="0.0" y="150" width="414" height="606"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HkR-Bn-Xtd">
-                                <rect key="frame" x="14" y="58" width="34" height="44"/>
+                                <rect key="frame" x="14" y="106" width="34" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="Jt3-e5-aRr"/>
                                     <constraint firstAttribute="width" constant="34" id="b6h-u6-aQC"/>
@@ -43,7 +43,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[Тип документу]" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="M4h-fj-MMr">
-                                <rect key="frame" x="64" y="68" width="326" height="20.5"/>
+                                <rect key="frame" x="64" y="116" width="326" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -72,6 +72,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="backButton" destination="HkR-Bn-Xtd" id="e3n-bT-Deh"/>
                         <outlet property="backgroundAnimationView" destination="fce-OG-z7G" id="SrC-Rm-qeY"/>
                         <outlet property="backgroundColorView" destination="8CL-m0-kOY" id="hx5-Ya-mwN"/>
                         <outlet property="childContainerView" destination="nRi-ME-JW7" id="fVe-WE-f3P"/>
